Added 3D test using three.js to imu component

--- a/src/app/components/panels-view/panels-view.component.html
+++ b/src/app/components/panels-view/panels-view.component.html
@@ -1,13 +1,7 @@
-<div style="height: 100%; width: 70%; display: inline-block;">
-    <div class="video-box">
-        <app-video-feed></app-video-feed>
-    </div>
-    <div class="logger-box component">
-        <div style="height: 100%; width: 100%; background: #eee;">
-            <div class="component-title">Depth</div>
-            {{depth}}
-        </div>
-    </div>
+<div class="container">
+  <app-video-feed></app-video-feed>
+  <app-depth></app-depth>
+  <app-imu></app-imu>
 </div>
 <!-- <div style="height: 100%; width: 30%; display: inline-block; vertical-align: top;">
     <div class="control-box">
