--- a/src/app/components/video-feed/video-feed.component.css
+++ b/src/app/components/video-feed/video-feed.component.css
@@ -1,14 +1,12 @@
-  /* .video-feed {
+  .video-feed {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-  } */
+    width: 100%;
+    background: #eee;
+  }
 
 .video-box {
   width: 400px;
   height: 300px;
-}
-
-* {
-
 }
