--- a/src/app/components/video-feed/video-feed.component.html
+++ b/src/app/components/video-feed/video-feed.component.html
@@ -1,4 +1,4 @@
-<div class="video-feed component" style="height: 100%; width: 100%; background: #eee;">
+<div class="video-feed component">
     <div class="component-title">Video feed component</div>
     <video class="video-box" controls>
       <source src={{video}} type="video/mp4">
