--- a/src/app/components/panels-view/panels-view.component.css
+++ b/src/app/components/panels-view/panels-view.component.css
@@ -6,6 +6,13 @@
     padding: 1em;
 } */
 
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 600px;
+  flex-direction: column;
+}
+
 .logger-box {
     display: flex;
     height: 30%;
