--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,10 @@
 .component {
   /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); this line is not working because overflow auto*/
   border-radius: 10px;
-  display: flex;
   overflow: auto;
   margin: 20px;
+}
+
+body {
+  margin: 0;
 }
