--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
 <div class="toolbar">
-    <img src="../assets/NoText_TransparentBackground.png" alt="UWRT Logo">
+  <img src="../assets/NoText_TransparentBackground.png" alt="UWRT Logo">
   <div>
     <h1 style="color: #444; font-family: Helvetica, Arial, sans-serif; font-weight: 300;">Underwater Robotics</h1>
   </div>
 </div>
+<mat-slide-toggle>
+  dark mode
+</mat-slide-toggle>
 <div class="body-container">
   <app-panels-view></app-panels-view>
 </div>
