Add video and apply quaternion to model

--- a/src/app/components/video-feed/video-feed.component.html
+++ b/src/app/components/video-feed/video-feed.component.html
@@ -1,6 +1,4 @@
 <div class="video-feed component">
     <div class="component-title">Video feed component</div>
-    <video class="video-box" controls>
-      <source src={{video}} type="video/mp4">
-    </video>
+    <img src="http://192.168.43.6:8080/stream?topic=/stereo/right/image_raw&amp;default_transport=compressed">
 </div>
