--- a/src/app/components/video-feed/video-feed.component.html
+++ b/src/app/components/video-feed/video-feed.component.html
@@ -1,4 +1,4 @@
 <div class="video-feed component">
     <div class="component-title">Video feed component</div>
-    <img src="http://192.168.43.214:8080/stream?topic=/stereo/right/image_raw&amp;default_transport=compressed">
+    <img src="http://192.168.1.140:8080/stream?topic=/darknet_ros/image_hud&default_transport=compressed">
 </div>
