--- a/src/app/components/imu/imu.component.html
+++ b/src/app/components/imu/imu.component.html
@@ -1,4 +1,4 @@
-<div class="imu component" id="imu_c">
+<div class="imu component mdc-theme--primary-bg">
   <div class="component-title">IMU Component</div>
   {{quaternion}}
   {{rpyRad}}
