move 3d render to inside of imu component

--- a/src/app/components/imu/imu.component.html
+++ b/src/app/components/imu/imu.component.html
@@ -1,4 +1,4 @@
-<div class="imu component mdc-theme--primary-bg">
+<div class="imu component mdc-theme--primary-bg" #canvas>
   <div class="component-title">IMU Component</div>
   {{quaternion}}
   {{rpyRad}}
