Added sliders to battery component

--- a/src/app/components/battery/battery.component.css
+++ b/src/app/components/battery/battery.component.css
@@ -1,8 +1,6 @@
-
-.imu {
+.battery {
   display: flex;
-  flex-direction: column;
   width: 100%;
-  height: 500px;
   background: #eee;
+  flex-direction: column;
 }
