--- a/src/app/components/panels-view/panels-view.component.html
+++ b/src/app/components/panels-view/panels-view.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <app-video-feed></app-video-feed>
   <app-depth></app-depth>
+  <app-battery></app-battery>
   <app-imu></app-imu>
 </div>
 <!-- <div style="height: 100%; width: 30%; display: inline-block; vertical-align: top;">
