--- a/src/styles.css
+++ b/src/styles.css
@@ -13,13 +13,9 @@
 
 .component {
   /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); this line is not working because overflow auto*/
-  border-radius: 10px;
-  overflow: auto;
+  /* border-radius: 10px; */
+  /* overflow: auto; */
   margin: 20px;
-}
-
-body {
-  margin: 0;
 }
 
 html, body { height: 100%; }
