added option to choose controls or state depth

--- a/src/app/components/depth/depth.component.html
+++ b/src/app/components/depth/depth.component.html
@@ -1,4 +1,6 @@
 <div class="depth component">
       <div class="component-title">Depth</div>
-      {{depth}}
+      <mat-radio-button>controls depth</mat-radio-button>
+      <mat-radio-button>state depth</mat-radio-button>
+      <div>{{depth}}</div>
 </div>
