--- a/src/app/components/depth/depth.component.html
+++ b/src/app/components/depth/depth.component.html
@@ -1,6 +1,8 @@
 <div class="depth component">
       <div class="component-title">Depth</div>
-      <mat-radio-button>controls depth</mat-radio-button>
-      <mat-radio-button>state depth</mat-radio-button>
+      <mat-radio-group [(ngModel)]="depthVersion">
+        <mat-radio-button [value]="1">controls depth</mat-radio-button>
+        <mat-radio-button [value]="2">state depth</mat-radio-button>
+      </mat-radio-group>
       <div>{{depth}}</div>
 </div>
