shows the depth with a larger font size

--- a/src/app/components/depth/depth.component.html
+++ b/src/app/components/depth/depth.component.html
@@ -4,5 +4,5 @@
         <mat-radio-button [value]="1">controls depth</mat-radio-button>
         <mat-radio-button [value]="2">state depth</mat-radio-button>
       </mat-radio-group>
-      <div>{{depth}}</div>
+      <h1>{{depth}} meters</h1>
 </div>
